--- a/src/app/crearproducto/crearproducto.component.html
+++ b/src/app/crearproducto/crearproducto.component.html
@@ -1,1 +1,38 @@
-<p>crearproducto works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tu Título Aquí</title>
+    <!-- Agrega la siguiente línea para vincular tu archivo CSS -->
+    <link rel="stylesheet" href="crearproducto.component.css">
+</head>
+<form [formGroup]="datosUsuario" (ngSubmit)="postMethod()" class="w-50 mx-auto mt-5">
+    <div class="mb-3 d-flex align-items-center">
+      <a routerLink="../inicio" class="text-dark">
+        volver
+      </a>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputTitle">Title</label>
+      <input type="text" class="form-control" id="exampleInputTitle" formControlName="title" placeholder="Enter title">
+      <span class="danger" *ngIf="datosUsuario.get('title')!.invalid && datosUsuario.get('title')!.touched">La Identificación es <strong>Obligatoria</strong></span>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPrice">Price</label>
+      <input type="number" class="form-control" id="exampleInputPrice" formControlName="price" placeholder="Price">
+      <span class="danger" *ngIf="datosUsuario.get('price')!.invalid && datosUsuario.get('price')!.touched">La Identificación es <strong>Obligatoria</strong></span>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputDescription">Description</label>
+      <input type="text" class="form-control" id="exampleInputDescription" formControlName="description" placeholder="Description">
+      <span class="danger" *ngIf="datosUsuario.get('description')!.invalid && datosUsuario.get('description')!.touched">La Identificación es <strong>Obligatoria</strong></span>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputCategoryId">Category ID</label>
+      <input type="number" class="form-control" id="exampleInputCategoryId" formControlName="categoryId" placeholder="Category ID">
+      <span class="danger" *ngIf="datosUsuario.get('categoryId')!.invalid && datosUsuario.get('categoryId')!.touched">La Identificación es <strong>Obligatoria</strong></span>
+    </div>
+    <br>
+    <button type="enviar" class="btn btn-primary" [disabled]="datosUsuario.invalid">enviar</button>
+  </form>
